--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -10,7 +10,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
-    <meta name="title" content="Glow Labs Facial Bar | Hewlett, NY" />
+    <meta name="title" content="Srp IT Project" />
     <meta
       name="description"
       content="The facials at Glow Labs are all customized to fit our clients' needs and desires! We offer a wide variety to choose from."
@@ -32,7 +32,7 @@
     <meta property="twitter:url" content="https://glowlabs.ga" />
     <meta
       property="twitter:title"
-      content="Glow Labs Facial Bar | Hewlett, NY"
+      content="Srp IT Project"
     />
     <meta
       property="twitter:description"
@@ -55,7 +55,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Glow Labs Facial Bar | Hewlett, NY</title>
+    <title>Srp IT Project</title>
   </head>
 
   <body>
